replace comments in pom.xml with content from the request project metadata